--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,19 +31,19 @@
         <h1>Sección Contacto</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Inicio</a>
-                <li><a href="./quinessomos.html">¿Quines somos?</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./quienessomos.html">¿Quines somos?</a></li>
                 <li><a href="./dondeestamos.html">¿Dónde estamos?</a></li>
                 <li><a href="./pruductos.html">Productos</a></li>
 
-                </li>
+                
             </ul>
         </nav>
 
     </header>
     <hr>
     <main>
-        < <section>
+         <section>
             <h2> Contacto</h2>
             <form action=""></form>
             <div>
@@ -53,7 +53,7 @@
             </div>
 
             <div>
-                <label for="email">ingreses su correo electrónico</label>
+                <label for="email">Ingrese su correo electrónico</label>
                 <input type="email" id="email" idplaceholder="email@ejemplo.com">
             </div>
             <select name="" id="">
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col">
-                    <h3>Sígueme</h3>
+                    <h4>Sígueme</h4>
                     <div class="social-links">
                         <a href="https://www.facebook.com/mielaccesorios" target="_blank"><i
                                 class="fab fa-facebook-f"></i></a>
